# Coastline

./: .travis.yml  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py  tox.ini  travis_pypi_setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: ci.yml  docs.yml  release.yml
docker/: README.md
docs/: api.md  conf.py  contributing.md  index.md  index.rst  installation.rst  navigation.yml  usage.rst
docs/getting-started/: installation.md  quick-start.md
docs/guide/: config-loader.md  configuration-basics.md  registry.md
examples/simple/: config.yaml  simple.py
src/coastline/: __init__.py  base.py  loader.py  registry.py
tests/: conftest.py  test_base.py  test_coastline.py  test_integration.py  test_loader.py  test_registry.py
